feat: Initial commit of Granteri Voice AI Agent system
- Added package.json with project metadata and scripts for development and deployment.
- Implemented webhook_handler.py for handling Vapi inbound call webhooks.
- Created .env and .env.example files for environment variable management.
- Developed Dockerfile for containerizing the application.
- Built FastAPI application in app.py for managing voice agent calls.
- Added demo.py for showcasing outbound and inbound call handling.
- Configured docker-compose.yml for service orchestration.
- Set up Nginx configuration for reverse proxy and rate limiting.
- Included requirements.txt for Python dependencies.
- Created start.sh script for development setup and execution.
- Implemented test_api.py for API endpoint testing.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,34 @@
 {
+  "name": "granteri-voice-agent",
+  "version": "1.0.0",
+  "description": "A robust voice AI agent system for inbound and outbound calls",
+  "main": "app.py",
+  "scripts": {
+    "start": "python app.py",
+    "dev": "python -m livekit.agents.cli dev test.py",
+    "demo": "python demo.py",
+    "test": "python -m pytest tests/",
+    "docker:build": "docker build -t granteri-agent .",
+    "docker:run": "docker-compose up -d",
+    "docker:stop": "docker-compose down",
+    "setup": "./start.sh"
+  },
   "dependencies": {
     "@vapi-ai/server-sdk": "^0.9.1"
+  },
+  "keywords": [
+    "voice-ai",
+    "telephony",
+    "vapi",
+    "livekit",
+    "agent",
+    "fastapi",
+    "webhook"
+  ],
+  "author": "Evidence",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/granteri.git"
   }
 }
