feat: Add TELYNYX_CONNECTION_ID to .env.local and clean up .env file

--- a/.env.local
+++ b/.env.local
@@ -20,6 +20,14 @@ ELEVEN_API_KEY="sk_6510c0bbb4443034a12cba412656dff5c47531ba74c325f2"
 
 TELYNYX_API_KEY="KEY019742391948D6CEE3854833D2389618_TiwuGYubGED23bf4A3FkAQ"
 TELYNYX_PUBLIC_KEY="gqXp2vFebGj75LKWZUU/wkDLeY+/AebS7NqimTuaYgY="
+TELYNYX_CONNECTION_ID="2711357918640342262"
+
+
+
+
+
+
+
 
 SIP_TRUNK_ID="TK19c3b93913e11be095491cae67f90fc4"
 
