Refactor and remove deprecated files; implement inbound call handling and outbound call functionality
- Deleted `test_api.py`, `web_gook.py`, and `webhook_handler.py` as they are no longer needed.
- Added `caller.py` for outbound call functionality using Vapi.
- Introduced `inbound-calls.py` to handle inbound call setup and management with LiveKit.
- Created `inbound-trunk.json` for defining SIP inbound trunk configuration.
- Implemented `mpa.py` to manage outbound calls through the Vapi API.
- Updated environment variable files to include necessary configurations for the new setup.

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 VAPI_TOKEN="4f0f540e-4442-40f0-bd18-197818fa5a80"
-PHONE_NUMBER=""
+PHONE_NUMBER="+15105550100"
 ASSISTANT_ID="36106494-5b92-48b2-b57a-6ccdcec19b55"
 PHONE_NUMBER_ID="5f136cfa-269d-49e1-81a8-c72b4da3f07a"
 
@@ -38,3 +38,5 @@ AGENT_NAME=Alex
 DEFAULT_VOICE_ID=alex
 
 
+TRUNK_SID="TKd51f2abccc92b5910a1b255872059a5f"
+TRUNK_NAME="grant"
