--- a/.env.backup
+++ b/.env.backup
@@ -5,9 +5,9 @@ PHONE_NUMBER_ID="5f136cfa-269d-49e1-81a8-c72b4da3f07a"
 
 OPENAI_API_KEY="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"
 GEMINI_API_KEY="AIzaSyCu_nt6VVhjJFofsyFRMBrcwmm_nZnBXEI"
-BILLING_PHONE_NUMBER="+917204218098"
-TECH_SUPPORT_PHONE_NUMBER="+917204218098"
-CUSTOMER_SERVICE_PHONE_NUMBER="+917204218098"
+BILLING_PHONE_NUMBER=+"917204218098"
+TECH_SUPPORT_PHONE_NUMBER=+"917204218098"
+CUSTOMER_SERVICE_PHONE_NUMBER=+"917204218098"
 LIVEKIT_URL="wss://grant-gqi9u97k.livekit.cloud"
 LIVEKIT_API_KEY="APImf2EJLQnX6ny"
 LIVEKIT_API_SECRET="trXlkjNOT64hJ9u8N2LdXDOdNayPRGbpEUi0vpqoD4N"
@@ -17,4 +17,6 @@ DEEPGRAM_API_KEY="93f6cb723c34614e1633b531c7c9c05c7f773a55"
 CARTESIA_API_KEY="sk_car_EdJ8oCV1KfFPtzPBJzc2Y3"
 ELEVEN_API_KEY="sk_6510c0bbb4443034a12cba412656dff5c47531ba74c325f2"
 
-SIP_TRUNK_ID="TK19c3b93913e11be095491cae67f90fc4"
+
+
+SIP_TRUNK_ID= "TK19c3b93913e11be095491cae67f90fc4"
